# VibeCRM

./: .gitignore  AGENTS.md  GEMINI.md  Makefile  README.md  ROADMAP.md
.gemini/commands/: speckit.tasks.toml
.github/workflows/: ci.yml
.pi/extensions/: e2e-command.ts
.pi/prompts/: e2e.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/endpoints/: auth.py  data.py  layout.py  meta.py
backend/app/core/: config.py
backend/app/db/: init_db.py  seeds.py  session.py
backend/app/models/: layout.py  metadata.py
backend/app/schemas/: dynamic.py  metadata.py
backend/app/services/: auth_service.py  data_service.py  layout_service.py  meta_service.py  schema_service.py
backend/scripts/: migrate_record_types.py
backend/tests/: conftest.py  test_e2e.py
backend/tests/api/: test_data.py  test_data_pagination.py  test_data_picklist.py  test_data_sorting.py  test_layout.py  test_meta.py  test_options_api.py
backend/tests/unit/: test_data_service.py  test_data_service_validation.py  test_lookup_service.py  test_meta_service_options.py  test_metadata_access_control.py  test_metadata_field.py  test_record_type_service.py  test_system_fields_creation.py
chat-histories/: clarify-01.md
db/seed/: meta.yml  (+6 more)
docs/: arch.md  code-structure.md  seed.md
e2e/: cases.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate_test_accounts.py  generate_test_users.py
(+121 files in other folders)
